salesforce/force-app/main/default/objects/DocGen_Request__c/DocGen_Request__c.object-meta.xml
<CustomObject>
    <description>Transient staging record for DocGen document generation. Created and deleted within a single Apex transaction. Orphan cleanup job targets Created_At__c older than 1 hour.</description>
    <label>DocGen Request</label>
    <pluralLabel>DocGen Requests</pluralLabel>
    <nameField>
        <label>Request Name</label>
        <type>AutoNumber</type>
        <displayFormat>DGR-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>