salesforce/force-app/main/default/objects/DocGen_Request__c/fields/Contract_Ids__c.field-meta.xml
<CustomField>
    <fullName>Contract_Ids__c</fullName>
    <label>Contract IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>