salesforce/force-app/main/default/objects/DocGen_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>DocGen Requests</relationshipLabel>
    <relationshipName>DocGenRequests</relationshipName>
    <type>Lookup</type>
</CustomField>