salesforce/force-app/main/default/objects/DocGen_Request__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>